name: sse
version: 1.0.0
synopsis: WAI application for routed server-sent events service
-- description:
homepage: https://github.com/tserdyuk/sse
license: MIT
license-file: LICENSE
author: Taras Serdyuk
maintainer: taras@techburg.io
category: Web
build-type: Simple
cabal-version: >= 1.10

library
  exposed-modules:
    SSE.Service
  other-modules:
    Data.GroupMap
  default-extensions:
    LambdaCase,
    NoImplicitPrelude
  build-depends:
    base >=4.7 && <4.8,
    base-prelude,
    bytestring,
    containers,
    dlist,
    http-types,
    network,
    wai,
    wai-extra
  hs-source-dirs: src
  default-language: Haskell2010
